# JobS

./: .gitignore  CMakeGenerate.VS2022.x64.bat  CMakeLists.txt  README.md
CMake/: TargetUseJobS.cmake
JobS/: CMakeLists.txt
JobS/Source/JobS/: JobS.cpp  JobS.h
Samples/: CMakeLists.txt
Samples/InitJobS/: CMakeLists.txt
Samples/InitJobS/Source/: Main.cpp
